# wolfram_r184

./: .gitignore  CMakeLists.txt  README.md  Wolfram_R184.sln
Wolfram_R184/: AutomatonDefines.h  CellularAutomaton.cpp  CellularAutomaton.h  Grid.cpp  Grid.h  TransitionLookUpTable.h  Wolfram_R184.cpp  Wolfram_R184.vcxproj  Wolfram_R184.vcxproj.filters
src/: CellularAutomaton.cpp  CellularAutomaton.hpp  Grid.cpp  Grid.hpp  InputController.cpp  InputController.hpp  OutputColorizer.hpp  TransitionLookupTable.hpp  main.cpp
src/platform/other/: OutputColorizer.cpp
src/platform/win/: OutputColorizer.cpp
